# Qt_TemplateProject

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/controller/: maincontroller.cpp  maincontroller.h
